test/upstream/tsgo/baselines/reference/compiler/exportAssignmentMerging7.errors.txt
a.ts(3,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
b.ts(1,10): error TS2305: Module '"./a"' has no exported member 'Bar'.


==== a.ts (1 errors) ====
    class Foo {}
    class Bar {}
    export = Foo;
    ~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    export { Bar }; // Causes error
==== b.ts (1 errors) ====
    import { Bar } from "./a";
             ~~~
!!! error TS2305: Module '"./a"' has no exported member 'Bar'.
    const b = new Bar();
    
    